portal local setup script